<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!-- UP DIVIDER -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:background="@color/not_use_space"
            android:orientation="vertical">
        </LinearLayout>

        <!-- CONTENT -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/Fondo1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="327dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="210dp"
                    android:layout_height="210dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/Logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/welcome"
                    android:textSize="32sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">
                <!-- Contenedor 2 -->
                <androidx.cardview.widget.CardView
                    android:layout_width="350dp"
                    android:layout_height="261dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/border"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <!-- Contenedor de User -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:layout_marginRight="45dp"
                                android:gravity="center"
                                android:text="@string/email"
                                android:textSize="20dp"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/Username"
                                android:layout_width="200dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:layout_marginBottom="4dp"
                                android:background="@drawable/border"
                                android:hint="@string/hint_email"
                                android:inputType="text" />

                        </LinearLayout>

                        <!-- Contenedor de Pass -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:layout_marginRight="6dp"
                                android:gravity="center"
                                android:text="@string/password"
                                android:textSize="20dp"
                                android:textStyle="bold" />
                            <EditText
                                android:id="@+id/Password"
                                android:layout_width="200dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="4dp"
                                android:background="@drawable/border"
                                android:hint="@string/hint_password"
                                android:inputType="textPassword" />

                        </LinearLayout>

                        <!-- Contenedor de Button Google -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <Button
                                android:layout_width="170dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="6dp"
                                android:layout_marginRight="16dp"
                                android:layout_marginBottom="4dp"
                                android:backgroundTint="@color/border_blue"
                                android:text="@string/login_with_google"/>

                            <Button
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="6dp"
                                android:layout_marginBottom="4dp"
                                android:backgroundTint="@color/border_blue"
                                android:text="@string/lonig" />

                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>

        <!-- DOWN DIVIDER -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:background="@color/not_use_space"
            android:gravity="end"
            android:orientation="vertical">

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>