<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:background="@color/not_use_space"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="662dp"
            android:orientation="vertical"
            android:background="@drawable/Fond2">

            <!-- ORRIAREN GOIBURUA -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/border2"
                    android:scaleType="centerCrop"
                    android:src="" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/search_book_title1"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:gravity="center"
                        android:text="@string/search_book_title2"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <!-- ORRIAREN BILAKETA EREMUA -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/BookTitle"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:hint="@string/hint_search_book_titel"
                    android:inputType="text" />

            </LinearLayout>

            <!-- SEARCH BOOK ITEMS -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/BookItemContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/not_use_space"
            android:gravity="end"
            android:orientation="vertical">

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>