<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
        <LinearLayout
            android:layout_width="409dp"
            android:layout_height="729dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">
            <!-- UP DIVIDER -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:background="@color/not_use_space"
                android:orientation="vertical"></LinearLayout>

            <!-- CONTENT -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="662dp"
                android:background="@drawable/Fondo1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="327dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="210dp"
                        android:layout_height="210dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/Logo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="@string/title"
                        android:textSize="32sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal">
                    <!-- Contenedor 2 -->
                    <androidx.cardview.widget.CardView
                        android:layout_width="250dp"
                        android:layout_height="200dp"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/border"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <!-- Contenedor de Button Google -->
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:orientation="horizontal">

                                <Button
                                    android:layout_width="180dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="6dp"
                                    android:layout_marginBottom="4dp"
                                    android:backgroundTint="@color/border_blue"
                                    android:text="@string/singup"
                                    />

                            </LinearLayout>

                            <!-- Contenedor de Button LogIn -->
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:orientation="horizontal">

                                <Button
                                    android:layout_width="180dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="6dp"
                                    android:layout_marginBottom="4dp"
                                    android:backgroundTint="@color/border_blue"
                                    android:text="@string/lonig" />

                            </LinearLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>

            <!-- DOWN DIVIDER -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/not_use_space"
                android:gravity="end"
                android:orientation="vertical">

            </LinearLayout>
        </LinearLayout>
    </>