<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Contenedor 2 -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="horizontal"
                android:padding="16dp">

                <!-- Contenedor de Imagen -->
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="140dp"
                    android:background="@color/gray_light"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/image2"
                        android:layout_width="80dp"
                        android:layout_height="120dp"
                        android:background="@color/gray_light"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_book_placeholder" />

                </LinearLayout>

                <!-- Contenedor de texto -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingStart="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/book_title_label"
                            android:textSize="14sp"
                            android:textStyle="bold"/>
                        <TextView
                            android:id="@+id/titleID"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:lineSpacingExtra="4dp"
                            android:text="Una Maldición De\nSombras y Espinas"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:text="@string/book_author_label"
                            android:textSize="14sp"
                            android:textStyle="bold"/>
                        <TextView
                            android:id="@+id/authorID"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="LJ ANDREWS"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_marginTop="7dp"
                            android:text="@string/book_lecture_data_label"
                            android:textSize="14sp"
                            android:textStyle="bold"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/startDateID"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="2025/01/12"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/endDateID"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:text="2025/01/20"
                                android:textSize="12sp" />

                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>